Bug 1007229 - Background tabs need to use the CaptionText color when using a high contrast theme on Windows 8/8.1. r=Gijs
UltraBlame original commit: 92c4779c8f45e0733aa48d8a8f38518b9ecda6d1

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -136,22 +136,26 @@
     margin-top: -2px;
   }
 
-  #toolbar-menubar:not(:-moz-lwtheme),
-  #TabsToolbar:not(:-moz-lwtheme) {
-    background-color: transparent !important;
-    color: black;
-    border-left-style: none !important;
-    border-right-style: none !important;
-  }
+  @media (-moz-windows-default-theme) {
+    #toolbar-menubar:not(:-moz-lwtheme),
+    #TabsToolbar:not(:-moz-lwtheme) {
+      background-color: transparent !important;
+      color: black;
+    }
 
-  
+    #main-menubar > menu:not(:-moz-lwtheme) {
+      color: inherit;
+    }
+
+    
 
 
 
-  @media not all and (-moz-os-version: windows-vista) {
-    @media not all and (-moz-os-version: windows-win7) {
-      #toolbar-menubar:not(:-moz-lwtheme):-moz-window-inactive {
-        color: ThreeDShadow;
+    @media not all and (-moz-os-version: windows-vista) {
+      @media not all and (-moz-os-version: windows-win7) {
+        #toolbar-menubar:not(:-moz-lwtheme):-moz-window-inactive {
+          color: ThreeDShadow;
+        }
       }
     }
   }
